Complete index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    vc
+
+    <ul>
+        <li><a href="buttermilkwaffles.html">Buttermilk Waffles</a></li>
+        <li><a href="pizzadough.html">Pizza Dough</a></li>
+        <li><a href="pastasauce.html">Pasta Sauce</a></li>
+    </ul>
+    
 </body>
 </html>
