Add CSS file and do basic page styling

--- a/pastasauce.html
+++ b/pastasauce.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
@@ -31,5 +32,7 @@
         <li>Stir from time to time, mashing up any large pieces of tomato with the back of a wooden spoon.</li>
         <li>Taste and correct for salt. Before tossing with pasta, you may remove the onion (as Hazan recommended) and save for another use, but many opt to leave it in. Serve with freshly grated parmigiano-reggiano cheese for the table.</li>
     </ol>
+
+    <a href="index.html">Back</a>
 </body>
 </html>
