--- a/pizzadough.html
+++ b/pizzadough.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Pizza Dough</title>
 </head>
 <body>
@@ -33,5 +34,7 @@
         <li>Knead 3 mins. Cut into 2 shape into balls. Place on heavily floured surface, cover with dampened cloth let rise 3 to 4 hours or longer ( in fridge for 8-24 hours). Remove from fridge 3 -45 mins.</li>
         <li>Place each ball on heavily floured surface and use fingers to stretch to shape into squares or rounds. Top and Bake</li>
     </ol>
+
+    <a href="index.html">Back</a>
 </body>
 </html>
