--- a/buttermilkwaffles.html
+++ b/buttermilkwaffles.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Buttermilk Waffles</title>
 </head>
 <body>
@@ -37,5 +38,7 @@
         <li>Combine the wet and dry ingredients, stirring just until nearly smooth; a few small lumps may remain.</li>
         <li>Spray your waffle iron with a non-stick cooking spray before preheating it. Cook waffles according to the manufacturer's directions. For an 8" round waffle iron, use about 1/3 cup batter; cook for 2 to 3 minutes, until the iron stops steaming.</li>
     </ol>
+
+    <a href="index.html">Back</a>
 </body>
 </html>
